RESOLVED FIXED277674
MobileSafari crashes on launch when running with ToT WebKit
https://bugs.webkit.org/show_bug.cgi?id=277674
Summary MobileSafari crashes on launch when running with ToT WebKit
Dan Glastonbury
Reported 2024-08-05 23:28:58 PDT
On visionOS, MobileSafari crashes when run with a build of ToT.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-08-05 23:29:09 PDT
Dan Glastonbury
Comment 2 2024-08-05 23:31:30 PDT
EWS
Comment 3 2024-08-06 09:05:24 PDT
Committed 281894@main (cdf0b5f2f86a): <https://commits.webkit.org/281894@main> Reviewed commits have been landed. Closing PR #31776 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.