Build fix _WKWebExtensionControllerConfiguration https://bugs.webkit.org/show_bug.cgi?id=277674 rdar://133273439

Reviewed by Timothy Hatcher.

MobileSafari fails to launch on visionOS because dyld can't find
_WKWebExtensionControllerConfiguration.  Implement
_WKWebExtensionControllerConfiguration in the same manner as 281809@main

* Source/WebKit/UIProcess/API/Cocoa/_WKWebExtension.mm:
* Source/WebKit/UIProcess/API/Cocoa/_WKWebExtensionControllerConfiguration.h:

Canonical link: https://commits.webkit.org/281894@main